# eepromulation

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
.github/workflows/: ci.yml
.helix/: languages.toml
cmake/: arm-none-eabi-toolchain.cmake  stm32wl-toolchain.cmake  warnings.cmake
examples/stm32wl/: CMakeLists.txt  startup.s  stm32wl.ld
examples/stm32wl/c/: CMakeLists.txt  main.c  stm32wl_compat.cpp
examples/stm32wl/cpp/: CMakeLists.txt  main.cpp
include/eeprom/: an2594_compat.h  emulation.hpp  emulation_impl.hpp  hal.hpp  host_flash_hal.hpp  stm32_flash_hal.hpp  stm32wl_flash_hal.hpp  types.hpp
src/: CMakeLists.txt  an2594_compat.cpp  emulation.cpp
src/hal/host/: flash_hal.cpp
src/hal/stm32/: flash_hal.cpp
tests/: .clang-tidy  CMakeLists.txt  test_emulation.cpp
tools/: amalgamate.py
